--- a/vignettes/iamc.Rmd
+++ b/vignettes/iamc.Rmd
@@ -21,16 +21,16 @@ The iamc R package is a collection of R tools provided by the Integrated Assessm
 Below follows a brief overview about the essential components of this package. 
 
 ### Input data
-Input data that should be checked can be provided as a file path to a reporting file,a quitte object or an object which can be converted to quitte using `as.quitte`.
+Input data that should be checked can be provided as a file path to a reporting file, a [quitte](https://github.com/pik-piam/quitte) object, or an object which can be converted to quitte using `as.quitte`.
 
 ### Configuration 
 The above-mentioned set of rules are defined in the configuration file. It describes the structure and values allowed for the input data (e.g. allowed variable names, units, min, max etc.). The configuration is given as .csv file and should be stored in iamc/inst/extdata. The default configuration is that of the CDLINKS convention. As will be shown below any other configuration can be specified.
 
 ### Pre-checks
-To allow for checking the basic structure of the data the user can define pre-checks. These checks are performed on the raw data and filter it according to the defined pre-checks, meaning that data that does not pass the pre-checks will be removed before continuing with the main checks. This ensures that the filtered data can actually be processed by the main checks without breaking the system. To define your own pre-check please add it as a R-script to the folder iamc/R/ using a name that starts with "precheck" (e.g. "preCheckMyNewCheck.R""). Any R script starting with "precheck" will automatically be detected and executed. 
+To allow for checking the basic structure of the data the user can define pre-checks. These checks are performed on the raw data and filter it according to the defined pre-checks, meaning that data that does not pass the pre-checks will be removed before continuing with the main checks. This ensures that the filtered data can actually be processed by the main checks without breaking the system. To define your own pre-check please add it as a R-script to the folder iamc/R/ using a name that starts with "precheck" (e.g. "preCheckMyNewCheck.R"). Any R script whose name starts with "precheck" will automatically be detected and executed. 
 
 ### Checks
-The main checks investigate the values of the uploaded data, e.g. if values lie within a given range etc ... Same as for pre-checks: to define your own check please add a R-script to the folder iamc/R/ using a name that starts with "check" (e.g. "CheckMyNewCheck.R""). Any R script starting with "check" will automatically be detected and executed. 
+The main checks investigate the values of the uploaded data, e.g. if values lie within a given range etc ... Same as for pre-checks: to define your own check please add a R-script to the folder iamc/R/ using a name that starts with "check" (e.g. "CheckMyNewCheck.R"). Any R script whose name starts with "check" will automatically be detected and executed. 
 
 ### Validation (in PDF file only)
 This package offers the option to validate your data against historical and other reference data. The results of the validation can (only!) be viewed in a pdf file. This file summarizes the results of the pre-checks, checks, and the validation. If the user does not activate the generation of this pdf file the validation will not be performed but only the results of the pre-checks and checks will be printed on the screen. A collection of global historical and other reference data is provided by the package and used as default reference data for the validation. Call iamReferenceData() to view it. 
